경력기술서 업로드

--- a/myeongpyo_choi/경력기술서.md
+++ b/myeongpyo_choi/경력기술서.md
@@ -20,7 +20,7 @@
 - Docker, AWS Fargate, ECS Anywhere, AWS EKS
 - Kubernetes, Argo CD, Helm (PoC)
 - Terraform (IaC), config.yaml 기반 자동화 스크립트 작성
-- **CI/CD 환경 구축 및 운영**: Bitbucket + Bamboo 파이프라인을 활용한 AWS 리소스 배포 자동화 경험 보유
+- CI/CD 환경 구축 및 운영: Bitbucket + Bamboo 파이프라인을 활용한 AWS 리소스 배포 자동화 경험 보유
 - GitOps 환경 구성 및 배포 흐름 최적화
 
 ### Monitoring & Logging
@@ -137,9 +137,9 @@
 ---
 
 ### 🔧 핵심 기술 및 도구
-- **AWS**: ECS, EKS, ALB, S3, RDS, CloudWatch, ACM, Route53, IAM, Parameter Store, SSM
+- **AWS**: ECS, EKS, ALB, S3, RDS, CloudWatch, ACM, Route53, IAM, SSM
 - **IaC**: Terraform, config.yaml 기반 자동화
-- **CI/CD**: Bamboo, ArgoCD, GitHub Actions
+- **CI/CD**: Bitbucket, Bamboo, ArgoCD, GitHub Actions
 - **Observability**: Datadog (Infra, APM, DBM), SLO 대시보드, Slack 알림 연동
 - **Security**: ACM, IAM Policy, SSM SecureString with KMS
 
